<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/foot">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">




        <!-- Team A -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamNameA"
                android:hint="teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/teamA"
                android:textColor="#FF9800"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/team_a_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/scoreTeamA"
                android:textColor="#FF9800"
                android:textSize="30sp" />



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg1"
                android:onClick="goalsTeamA"
                android:text="@string/goalsTeamA"
                android:textColor="#FF9800" />

            <Button
                android:id="@+id/team_a_penalty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg1"
                android:gravity="center"
                android:onClick="teamAPenalty"
                android:text="@string/TeamAPenalty" />

            <Button
                android:id="@+id/team_a_yellow_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="#FFEB3B"
                android:onClick="yellowCardForTeamA"
                android:text="@string/yellowCardTeamA"
                android:textColor="#000000" />

            <Button
                android:id="@+id/team_a_red_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:background="#F44336"
                android:onClick="redCardForTeamA"
                android:text="@string/redCardTeamA"
                android:textColor="#000000" />
        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="#00B0FF" />




        <!-- Team B -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:orientation="vertical">



            <TextView
                android:id="@+id/teamNameB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/teamB"
                android:textColor="#558B2F"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/team_b_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/scoreTeamB"
                android:textColor="#C6FF00"
                android:textSize="30sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg1"
                android:onClick="goalForTeamB"
                android:text="@string/goalsTeamB"
                android:textColor="#C6FF00" />

            <Button
                android:id="@+id/team_b_penalty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg1"
                android:onClick="teamBPenalty"
                android:text="@string/TeamBPenalty" />

            <Button
                android:id="@+id/team_b_yellow_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="#FFEB3B"
                android:onClick="yellowCardForTeamB"
                android:text="@string/yellowCardTeamB"
                android:textColor="#000000" />

            <Button
                android:id="@+id/team_b_red_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:background="#F44336"
                android:onClick="redCardForTeamB"
                android:text="@string/redCardTeamB"
                android:textColor="#000000" />
        </LinearLayout>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">


        </LinearLayout>


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="1dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:onClick="resetScore"
                android:text="reset" />


        </RelativeLayout>


    </LinearLayout>

</LinearLayout>


